force-app/main/default/objects/Collection_Operation_Time_Block__c/Collection_Operation_Time_Block__c.object-meta.xml
<CustomObject>
    <label>Collection Operation Time Block</label>
    <nameField>
        <displayFormat>COTB-{00000000}</displayFormat>
        <label>CO Time Block ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Operation Time Blocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>