force-app/main/default/objects/Collection_Operation_Time_Block__c/fields/Collection_Operation__c.field-meta.xml
<CustomField>
    <fullName>Collection_Operation__c</fullName>
    <label>Collection Operation</label>
    <referenceTo>Biomed_Collection_Op_Center__c</referenceTo>
    <relationshipLabel>Collection Operation Time Blocks</relationshipLabel>
    <relationshipName>Collection_Operation_Time_Blocks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>