force-app/main/default/objects/Collection_Operation_Time_Block__c/fields/Time_Block__c.field-meta.xml
<CustomField>
    <fullName>Time_Block__c</fullName>
    <label>Time Block</label>
    <referenceTo>Time_Block__c</referenceTo>
    <relationshipLabel>Collection Operation Time Blocks</relationshipLabel>
    <relationshipName>Collection_Operation_Time_Blocks</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>