force-app/main/default/objects/Collection_Operation_Time_Block__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Collection_Operation__c</columns>
    <columns>Time_Block__c</columns>
    <columns>Effective_Start_Date__c</columns>
    <columns>Effective_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>